feat: Document available sort fields in REST API v2